# CrysGen

./: .gitignore  LICENSE  README.md  pyproject.toml
crysgen/train/: mattergen.py  model.py  utils.py
